--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "artem200921.github.io/Final_project/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /Final_project/"
   },
   "repository": {
     "type": "git",
